# vbase-py

./: .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  cspell.json  environment.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.py
.cursor/rules/: style.mdc
.github/: dependabot.yml
.github/scripts/: python_dependency_locks.py
.github/workflows/: pr-pylint.yml  publish-pypi.yml  python-dependency-locks.yml  run-pylint.yaml  run-setup-matrix.yaml  test-forwarder-pub-dev.yml  test-localhost.yml  update-main-docs.yml  update-python-dependency-locks.yml
agents/memory/: MEMORY.md
config/: .env.forwarder.localhost  .env.forwarder.pub.dev  .env.localhost
docs/: addresses.md  api.md  api.rst  conf.py  dataset_commitments.md  index.rst  process.md  requirements.txt  welcome- NOT USED.md  welcome.md
internal/specs/: app-architecture.md  development.md  github-actions.md  python-dependency-hashes.md
requirements/: README.md  dev.in  dev.txt  docs.in  docs.txt  test.in  test.txt  tools.in  tools.txt
requirements/lock/: base.txt  dev.txt  docs.txt  test.txt  tools.txt
requirements/src/: base.in  dev.in  docs.in  test.in
specs/: github-actions.md
vbase/: __init__.py  _version.py
vbase/core/: __init__.py  aggregate_indexing_service.py  commitment_service.py  commitment_service_test.py  failover_indexing_service.py  forwarder_commitment_service.py  forwarder_commitment_service_test.py  indexing_service.py  models.py  set_matching_service.py  (+13 more)
(+65 files in other folders)
